@@ -1,3 +1,9 @@
+2008-03-08  Jean Brefort  <jean.brefort@normalesup.org>
+
+	reviewed by: <delete if not using a buddy>
+
+	* gcu/element.cc:
+
 ##Text encoding: utf-8
 
 2008-02-19  Jean Bréfort  <jean.brefort@normalesup.org>
